static/css/ultros.css
#logo {
  margin-bottom: -50px;
}

.code-nav {
    margin: -15px 100px 0 0;
    font-size: 20px;
    float: right;
}

.announcement {
    border: 1px #800080 dashed;
    border-radius: 20px;
    padding-top: 2em;
    padding-bottom: 0.5em;
}

code {
    border: 1px #400040 dashed;
    background-color: #FFDDFF;
    color: grey;
}

.avatar {
    box-shadow: 10px 10px 5px #DDDDDD;
    border-radius: 20px;
}

.green-text {
    color: green !important;
}

.red-text {
    color: red !important;
}

.blue-text {
    color: blue !important;
}

.grid-header {
    text-align: center;
    padding-top: 2em;
    margin-right: 0 !important;
    margin-left: 0 !important;
}
.grid-header-nomargin {
    text-align: center;
    padding-top: 0 !important;
    margin-right: 0 !important;
    margin-left: 0 !important;
}

.grid-left {
    /*margin-right: 0 !important;*/
    /*margin-left: 0 !important;*/
    padding-left: 1em !important;
    border-right: 1px solid #D1ADFF;
    /*text-align: right;*/
    /*font-size: large;*/
}

.grid-right {
    /*margin-left: 0 !important;*/
    /*margin-right: 0 !important;*/
    padding-right: 1em !important;
    border-left: 1px solid #D1ADFF;
    /*text-align: left;*/
    /*font-size: large;*/
}

.grid-center {
    margin-left: auto !important;
    margin-right: auto !important;
}

.icon-font-size {
    font-size: 30px;
    border-left: 2px solid grey;
    margin-left: 5px;
    padding-left: 8px;
}

.header-column {
    width: 100%;
}

.text-column {
    width: 85%;
}

.text-column-small {
    width: 55%;
}

.num-column {
    width: 15%;
}

.text-column-exception {
    width: 45%;
    overflow-x: auto;
}

.date-column-exception {
    width: 35%;
}

.column-exception {
    width: 20%;
}

.table-top-margin {
    margin-top: 48px;
}

td {
    color: black;
}

.second-nav {
    float: right;
    text-align: center;
    margin: -0.5em 0 0 0;
    padding: 0.4em 0;
    font-family:'Oswald', Arial, sans-serif;
}
.second-nav li {
    display:inline;
    float:none;
}

.second-nav a {
    display:inline-block;
    padding: 0.6em 1.2em;
    background-color: #EFEFEF;
    border-radius: 10px;
    border-right: 1px solid #bbb;
    border-bottom: 2px solid #bbb;
    color: #666;text-decoration:none;
    text-transform:uppercase;
    text-shadow: 1px 1px 1px #fff;
    font-size: 1.1em;
    margin: 0 0 0.6em 0;
}

.second-nav a:hover {
    color: #fff;
    text-shadow: 1px 1px 0 #333;
    background-color: #ca80ff;
}

.second-nav a.active {
    color: #fff;
    text-shadow: 1px 1px 0 #333;
    /*font-weight: bold;*/
    background-color: #8e47c1;
    letter-spacing: 1px;
}

.second-navli span {
    display: block;
    font-size: 10px;
    color: #666;
    text-shadow: none;
    line-height: 8px;
}

